fixed padding issue with links on Safari

--- a/style.scss
+++ b/style.scss
@@ -86,6 +86,7 @@ hr {
 a {
 	text-decoration: none;
 	color: $white;
+	padding: 2px;
 	&:hover {
 		color: $navbarcolor
 	}
